--- a/index.html
+++ b/index.html
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Proyecto x definir</title>
-  </head>
-  <body>
-    <h1>proyecto</h1>
-  </body>
+<html lang="es">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Proyecto x definir</title>
+</head>
+<header>
+  <img src="assets/img/logoblancoFinal.png" width="10%" alt="logoMattCargo">
+  <nav>
+    <ul>
+      <a href="#"><li>Inicio</li></a>
+      <a href="#"><li>Servicios</li></a>
+      <a href="#"><li>Contacto</li></a>
+    </ul>
+  </nav>
+</header>
+
+<body>
+  <h1>proyecto</h1>
+</body>
+
 </html>
