se corrige navbar

--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
   <title>Proyecto x definir</title>
 </head>
 <header>
-  <img src="assets/img/logoblancoFinal.png" width="10%" alt="logoMattCargo">
+  <img src="" width="10%" alt="logoMattCargo">
   <nav>
     <ul>
       <a href="#"><li>Inicio</li></a>
-      <a href="#"><li>Servicios</li></a>
+      <a href="#"><li>Servicio</li></a>
       <a href="#"><li>Contacto</li></a>
     </ul>
   </nav>
+  <img src="" alt="userlogin">
 </header>
 
 <body>
