--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- link a mis estilos -->
+  <link rel="stylesheet" href="assets/css/style.css">
   <title>Proyecto x definir</title>
 </head>
 <header>
@@ -20,7 +22,23 @@
 </header>
 
 <body>
+  <div id="page-container">
   <h1>proyecto</h1>
+
+
+  <footer class="footer-container">
+    <div class="footer-left">
+      <img id="logo" src="assets/img/logoblanco.png" alt="Logo de la empresa">
+    </div>
+    <div class="footer-right">
+      <ul>
+        <li>Dirección: Calle Falsa 123, Ciudad de Antofagasta</li>
+        <li>Teléfono: (123) 5555-555</li>
+        <li>correoalgo.cl</li>
+      </ul>
+    </div>
+  </footer>
+</div>
 </body>
 
 </html>
