--- a/index.html
+++ b/index.html
@@ -1,24 +1,36 @@
 <!DOCTYPE html>
 <html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Proyecto x definir</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <header>
+      <img
+        class=""
+        src="/assets/img/logoblancoFinal.png"
+        width="10%"
+        alt="logoMattCargo"
+      />
+      <nav>
+        <ul>
+          <a href="#"><li>Inicio</li></a>
+          <a href="#"><li>Servicio</li></a>
+          <a href="#"><li>Contacto</li></a>
+        </ul>
+      </nav>
+      <img src="" alt="userlogin" />
+    </header>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Proyecto x definir</title>
-</head>
-<body>
-  <header>
-    <img src="" width="10%" alt="logoMattCargo">
-    <nav>
-      <ul>
-        <a href="#"><li>Inicio</li></a>
-        <a href="#"><li>Servicio</li></a>
-        <a href="#"><li>Contacto</li></a>
-      </ul>
-    </nav>
-    <img src="" alt="userlogin">
-  </header>
-  <h1>proyecto</h1>
-</body>
+    <img
+      src="./assets/img/Proyecto nuevo (1).png"
+      width="800px"
+      alt="toroGranate"
+      class="toroPortada"
+    />
+    <div class="contGris"></div>
+  </body>
 </html>
