--- a/index.html
+++ b/index.html
@@ -5,25 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Proyecto x definir</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <header>
-      <img
-        class=""
-        src="/assets/img/logoblancoFinal.png"
-        width="10%"
-        alt="logoMattCargo"
-      />
-      <nav>
-        <ul>
-          <a href="#"><li>Inicio</li></a>
-          <a href="#"><li>Servicio</li></a>
-          <a href="#"><li>Contacto</li></a>
-        </ul>
-      </nav>
-      <img src="" alt="userlogin" />
-    </header>
+    <link rel="stylesheet" href="./assets/css/style.css" />
+ 
 
     <head>
       <meta charset="UTF-8" />
@@ -32,7 +15,12 @@
       <!-- link a mis estilos -->
       <link rel="stylesheet" href="assets/css/style.css" />
       <title>Proyecto x definir</title>
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@800&display=swap" rel="stylesheet">
     </head>
+    <body>
+      
     <header>
       <img src="" width="10%" alt="logoMattCargo" />
       <nav>
@@ -45,8 +33,36 @@
       <img src="" alt="userlogin" />
     </header>
 
-    <div id="page-container">
-      <h1>proyecto</h1>
+
+<main>
+
+
+
+  <img
+  src="./assets/img/Proyecto nuevo (1).png"
+  width="800px"
+  alt="toroGranate"
+  class="toroPortada"
+/>
+<div class="contGris"></div>
+
+
+<div class="contenedorBanner" >
+<h1 class="tituloBanner">Trasporte de Carga</h1>
+<h2 class="subtituloBanner">Uniendo destinos en todo Chile</h2>
+
+<div class="diseno1"></div>
+
+
+</div>
+
+
+<button class="cotizar"> Cotiza Aquí</button>
+
+</main>
+
+
+ 
 
       <footer class="footer-container">
         <div class="footer-left">
