--- a/index.html
+++ b/index.html
@@ -1,78 +1,78 @@
 <!DOCTYPE html>
 <html lang="es">
-    <head>
-      <meta charset="UTF-8" />
-      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <!-- link a mis estilos -->
-      <link rel="stylesheet" href="assets/css/style.css" />
-      <title>Proyecto x definir</title>
-      <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@800&display=swap" rel="stylesheet">
-<link rel="stylesheet" type="text/css" href="assets/css/style.css">
-    </head>
-    <body>
-      
-    <header>
-      <img src="" width="10%" alt="logoMattCargo" />
-      <nav>
-        <ul>
-          <a href="#"><li>Inicio</li></a>
-          <a href="#"><li>Servicio</li></a>
-          <a href="#"><li>Contacto</li></a>
-        </ul>
-      </nav>
-      <img src="" alt="userlogin" />
-    </header>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- link a mis estilos -->
+  <link rel="stylesheet" href="assets/css/style.css" />
+  <title>Proyecto x definir</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@800&display=swap" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+</head>
+
+<body>
+
+  <header>
+    <h1 class="logoNav">Matt Cargo</h1>
+    <nav>
+      <ul>
+        <a href="#">
+          <li>Inicio</li>
+        </a>
+        <a href="#">
+          <li>Servicio</li>
+        </a>
+        <a href="#">
+          <li>Contacto</li>
+        </a>
+      </ul>
+    </nav>
+    <img src="" alt="userlogin" />
+  </header>
 
 
-<main>
+  <main>
 
 
 
-  <img
-  src="./assets/img/Proyecto nuevo (1).png"
-  width="800px"
-  alt="toroGranate"
-  class="toroPortada"
-/>
-<div class="contGris"></div>
+    <img src="./assets/img/Proyecto nuevo (1).png" width="800px" alt="toroGranate" class="toroPortada" />
+    <div class="contGris"></div>
 
 
-<div class="contenedorBanner" >
-<h1 class="tituloBanner">Trasporte de Carga</h1>
-<h2 class="subtituloBanner">Uniendo destinos en todo Chile</h2>
+    <div class="contenedorBanner">
+      <h1 class="tituloBanner">Trasporte de Carga</h1>
+      <h2 class="subtituloBanner">Uniendo destinos en todo Chile</h2>
 
-<div class="diseno1"></div>
-
-
-</div>
+      <div class="diseno1"></div>
 
 
-<button class="cotizar"> Cotiza Aquí</button>
-
-</main>
-
-
- 
-
-      <footer class="footer-container">
-        <div class="footer-left">
-          <img
-            id="logo"
-            src="assets/img/logoblanco.png"
-            alt="Logo de la empresa"
-          />
-        </div>
-        <div class="footer-right">
-          <ul>
-            <li>Dirección: Calle Falsa 123, Ciudad de Antofagasta</li>
-            <li>Teléfono: (123) 5555-555</li>
-            <li>correoalgo.cl</li>
-          </ul>
-        </div>
-      </footer>
     </div>
-  </body>
+
+
+    <button class="cotizar"> Cotiza Aquí</button>
+
+  </main>
+
+
+
+
+  <footer class="footer-container">
+    <div class="footer-left">
+      <img id="logo" src="assets/img/logoblanco.png" alt="Logo de la empresa" />
+    </div>
+    <div class="footer-right">
+      <ul>
+        <li>Dirección: Calle Falsa 123, Ciudad de Antofagasta</li>
+        <li>Teléfono: (123) 5555-555</li>
+        <li>correoalgo.cl</li>
+      </ul>
+    </div>
+  </footer>
+  </div>
+</body>
+
 </html>
