se añade icono de user log in

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </ul>
     </nav>
     <section id="menuLogin">
-      <img src="" alt="userlogin" />
+      <img  src="assets/img/iconologin.png" alt="userLoginIcon" />
     </section>
   </header>
 
