diseño formularios y home

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <script src="./index.js"></script>
 </head>
 
 <body>
@@ -34,7 +35,7 @@
       </ul>
     </nav>
     <section id="menuLogin">
-      <img  src="assets/img/iconologin.png" alt="userLoginIcon" />
+    <a href="/assets/pages/formulario.html">  <img  src="assets/img/iconologin.png" alt="userLoginIcon" class="login" ></a>
     </section>
   </header>
 
@@ -52,12 +53,121 @@
       <h2 class="subtituloBanner">Uniendo destinos en todo Chile</h2>
 
       <div class="diseno1"></div>
+    <img class="carretera" src="./assets/img/kisspng-indian-national-highway-system-roadworks-image-5c4dbc4945fb29 1 (1).png" alt="">
 
 
     </div>
 
+  
 
     <button class="cotizar"> Cotiza Aquí</button>
+
+
+
+
+
+
+
+
+<section class="info"> 
+
+<h2>Bienvenidos a Matt Cargo</h2>
+<h3>Nuestros Servicios</h3>
+
+<p>Apoyo a sus operaciones directamente desde las
+  regiones del norte de Chile.
+  Tratamiento y seguimiento personalizado de todos sus requerimientos.
+  Servicios door to door con constante seguimiento de
+  la carga a través de GPS y comunicación móvil.</p>
+  <p>
+
+    Atención de carga de proyectos con equipos especiales, estudio de ruta y escolta policial.
+    Seguros a la carga y responsabilidad civil.
+    Amplia gama de equipos hasta el más alto estándar
+    minero, aptos para entrar a las principales faenas mineras e industriales (estándar MEL).
+
+  </p>
+
+  <img src="./assets/img/camioneta.png"  class="camioneta" alt="" >
+
+
+
+
+</section>
+
+
+
+
+
+
+
+
+<section class="carrusel">
+<img src="./assets/img/Puerto_-1030x771.jpg" alt="">
+<img src="./assets/img/58b7856d-5043-47b6-8e88-3edd342c7025.jfif" alt="">
+<img src="./assets/img/0b9e9bac-a5f0-4d6c-b583-369e480ca45a.jfif" alt="">
+<img src="./assets/img/6cc09f84-9494-4b82-958e-150b65c84c3e.jfif" alt="">
+<img src="./assets/img/a572ae8f-82ab-4dd5-a3d7-493ff024a63d.jfif" alt="">
+
+</section>
+
+
+
+
+
+
+
+
+
+<article class="contOp">
+
+
+<div class="card">
+
+
+
+
+    <img src="./assets/img/alegre-mujer-mediana-edad-cabello-rizado.jpg" width="250px" alt="">
+    <h3>Cristina rami</h3>
+    <p>"Muy buen servicio e increible atención" </p>
+    
+
+    
+</div>
+
+<div class="card">
+
+
+
+
+  <img src="./assets/img/alegre-mujer-mediana-edad-cabello-rizado.jpg" width="250px" alt="">
+  <h3>askj</h3>
+  <p>askldjasjkl</p>
+  
+
+  
+</div>
+
+<div class="card">
+
+
+
+
+  <img src="./assets/img/alegre-mujer-mediana-edad-cabello-rizado.jpg" width="250px" alt="">
+  <h3>askj</h3>
+  <p>askldjasjkl</p>
+  
+
+  
+</div>
+
+
+
+
+
+</article>
+
+
 
   </main>
 
@@ -77,6 +187,7 @@
     </div>
   </footer>
   </div>
+
 </body>
 
 </html>
