se crea vista cotizador

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
     <h1 class="logoNav">Matt Cargo</h1>
     <nav>
       <ul>
-        <a href="#">
+        <a href="./index.html">
           <li>Inicio</li>
         </a>
-        <a href="#">
+        <a href="./assets/pages/cotizador.html">
           <li>Servicio</li>
         </a>
         <a href="#">
@@ -97,6 +97,14 @@
 
 
 
+<section class="info2">
+
+
+  <img src="./assets/img/repartidor.png" alt="" class="repartidor">
+
+  <p> Servicio personalizado</p>
+</section>
+
 
 
 
@@ -127,7 +135,7 @@
 
 
 
-    <img src="./assets/img/alegre-mujer-mediana-edad-cabello-rizado.jpg" width="250px" alt="">
+    <img src="./assets/img/mujer.png.png" width="250px" alt="">
     <h3>Cristina rami</h3>
     <p>"Muy buen servicio e increible atención" </p>
     
@@ -140,7 +148,7 @@
 
 
 
-  <img src="./assets/img/alegre-mujer-mediana-edad-cabello-rizado.jpg" width="250px" alt="">
+  <img src="./assets/img/hombre.png.png" width="250px" alt="">
   <h3>askj</h3>
   <p>askldjasjkl</p>
   
@@ -153,7 +161,7 @@
 
 
 
-  <img src="./assets/img/alegre-mujer-mediana-edad-cabello-rizado.jpg" width="250px" alt="">
+  <img src="./assets/img/mujer2.png" width="250px" alt="">
   <h3>askj</h3>
   <p>askldjasjkl</p>
   
@@ -166,6 +174,8 @@
 
 
 </article>
+
+
 
 
 
