boton cotizar aquí

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
   
 
-    <button class="cotizar"> Cotiza Aquí</button>
+    <button class="cotizar">   <a href="./assets/pages/cotizador.html"> Cotiza Aquí</a></button>
 
 
 
