creacion  pagina contacto y contenedor granate

--- a/assets/pages/formulario.html
+++ b/assets/pages/formulario.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="../css/form.css" />
   </head>
   <body>
+    <div class="contForm2"></div>
+
     <div class="contForm">
       <form action="" method="post">
         <img
