--- a/assets/pages/login.html
+++ b/assets/pages/login.html
@@ -12,6 +12,7 @@
     rel="stylesheet"
   />
   <body>
+    <div class="contForm2"></div>
     <div class="contForm">
       <form action="" method="post">
         <img
