--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <a href="./assets/pages/cotizador.html">
           <li>Servicio</li>
         </a>
-        <a href="#">
+        <a href="./assets/pages/contacto.html">
           <li>Contacto</li>
         </a>
       </ul>
@@ -74,17 +74,22 @@
 <h2>Bienvenidos a Matt Cargo</h2>
 <h3>Nuestros Servicios</h3>
 
-<p>Apoyo a sus operaciones directamente desde las
-  regiones del norte de Chile.
-  Tratamiento y seguimiento personalizado de todos sus requerimientos.
-  Servicios door to door con constante seguimiento de
-  la carga a través de GPS y comunicación móvil.</p>
+<p>Bienvenidos a Matt Cargo, su empresa de envíos confiable desde el norte de Chile a todo el país.
+
+  En Matt Cargo, nos dedicamos a ofrecer soluciones de envío eficientes y seguras para todos nuestros clientes. Ya sea que necesite enviar paquetes, documentos, mercancías o carga pesada, podemos ayudarlo a llegar a su destino de manera rápida y confiable.
+  
+  Nuestro equipo altamente capacitado se asegura de que su envío sea manejado con cuidado y llegue a su destino a tiempo. 
+  
+  
+ 
   <p>
 
-    Atención de carga de proyectos con equipos especiales, estudio de ruta y escolta policial.
-    Seguros a la carga y responsabilidad civil.
-    Amplia gama de equipos hasta el más alto estándar
-    minero, aptos para entrar a las principales faenas mineras e industriales (estándar MEL).
+    También ofrecemos seguimiento en línea para que pueda estar al tanto del estado de su envío en todo momento.
+  
+  Además, en Matt Cargo nos preocupamos por la sustentabilidad y el medio ambiente, por lo que utilizamos prácticas de envío responsables y sostenibles.
+  
+  No importa si está enviando dentro de la misma ciudad o a través del país, en Matt Cargo estamos listos para brindarle la mejor experiencia de envío. Contáctenos hoy mismo para obtener más información y comenzar a enviar con nosotros.
+  
 
   </p>
 
@@ -101,8 +106,19 @@
 
 
   <img src="./assets/img/repartidor.png" alt="" class="repartidor">
+  <img src="./assets/img/logoblancoFinal.png" width="180px" alt="" class="logoCaja">
 
-  <p> Servicio personalizado</p>
+<p class="servper">
+
+  
+  En Matt Cargo, ofrecemos un servicio personalizado para aquellos clientes que necesitan un envío más específico y adaptado a sus necesidades particulares.
+
+  Con nuestro servicio personalizado, trabajamos en estrecha colaboración con cada cliente para entender sus requisitos únicos y ofrecer soluciones personalizadas que se ajusten a sus necesidades.
+  <br> <br> Desde el embalaje y la manipulación especializada de sus artículos hasta la entrega a su destino final, nos aseguramos de que su envío reciba la atención y el cuidado necesarios en cada paso del proceso.
+  
+  Además, nuestro equipo de expertos está disponible para asesorarlo en cualquier pregunta o inquietud que pueda tener sobre su envío personalizado. Ya sea que necesite un envío urgente, envío de objetos valiosos o artículos delicados, nuestro equipo está preparado para ofrecerle soluciones confiables y seguras.
+  
+  .</p>
 </section>
 
 
@@ -137,7 +153,7 @@
 
     <img src="./assets/img/mujer.png.png" width="250px" alt="">
     <h3>Cristina rami</h3>
-    <p>"Muy buen servicio e increible atención" </p>
+    <p>"Nuestra empresa, ABC Electronics, ha utilizado los servicios de Matt Cargo varias veces y estamos muy contentos con su servicio." </p>
     
 
     
@@ -149,8 +165,8 @@
 
 
   <img src="./assets/img/hombre.png.png" width="250px" alt="">
-  <h3>askj</h3>
-  <p>askldjasjkl</p>
+  <h3> Domingo Ramirez</h3>
+  <p>"Hemos utilizado el servicio de envío de Matt Cargo para enviar suministros médicos a través de Chile durante la pandemia y han sido un gran socio en este proceso. Siempre han sido extremadamente responsables y se han asegurado de que los envíos lleguen a tiempo".</p>
   
 
   
@@ -162,8 +178,8 @@
 
 
   <img src="./assets/img/mujer2.png" width="250px" alt="">
-  <h3>askj</h3>
-  <p>askldjasjkl</p>
+  <h3>Carolina Nazur</h3>
+  <p>"Como dueña de una pequeña empresa que vende productos de arte en línea, confío en Matt Cargo para manejar mis envíos. Me encanta su servicio personalizado, que me permite hacer preguntas específicas sobre el envío y recibir respuestas rápidas."</p>
   
 
   
