--- a/assets/pages/formulario.html
+++ b/assets/pages/formulario.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script defer src="./formulario.js"></script>
+    <script defer src="./formulario.js" defer></script>
     <style></style>
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@800&display=swap"
@@ -17,7 +17,7 @@
     <div class="contForm2"></div>
 
     <div class="contForm">
-      <form action="" method="post">
+      <form action="formulario.html" method="post" class="registro">
         <img
           src="../img/logoblancoFinal.png"
           width="200px"
@@ -29,7 +29,7 @@
         <p class="errorNom"></p>
 
         <label for="mail">Correo</label>
-        <input type="text" name="mail" id="email" />
+        <input type="text" name="email" id="email" />
         <p class="errorMail"></p>
 
         <label for="phone">Telefono</label>
@@ -51,4 +51,4 @@
       </form>
     </div>
   </body>
-</html>
+</html> -->
