--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
   <header>
     <h1 class="logoNav">Matt Cargo</h1>
-    <nav>
-      <ul>
+    <nav >
+      <ul class="nav1">
         <a href="./index.html">
           <li>Inicio</li>
         </a>
