--- a/assets/pages/contacto.html
+++ b/assets/pages/contacto.html
@@ -22,6 +22,12 @@
     </style>
   </head>
   <body>
+    <img
+      class="carretera"
+      src="../img/kisspng-indian-national-highway-system-roadworks-image-5c4dbc4945fb29 1 (1).png"
+      alt=""
+      srcset=""
+    />
     <h1>Contacto</h1>
     <p>
       Gracias por considerar a Matt Cargo para sus necesidades de envío. <br />
@@ -46,6 +52,6 @@
       <input type="submit" value="Enviar" />
     </form>
 
-    <img src="../img/logoblancoFinal.png" width="200px" alt="" />
+    <img src="../img/logoblancoFinal.png" width="150px" alt="" />
   </body>
 </html>
