--- a/assets/pages/login.html
+++ b/assets/pages/login.html
@@ -74,7 +74,7 @@
 
             const usuario = objetoJson.usuario;
             localStorage.setItem("usuario", JSON.stringify(usuario));
-            window.location = "./cuenta.html";
+            window.location = "cuenta.html";
           } catch (error) {
             // conconssole.error(error.code);
             // console.error(error.message);
