--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
 
 <section class="info"> 
 
-<h2>Bienvenidos a Matt Cargo</h2>
-<h3>Nuestros Servicios</h3>
+<h2 class="bienvenida">Bienvenidos a Matt Cargo</h2>
+
 
 <p>Bienvenidos a Matt Cargo, su empresa de envíos confiable desde el norte de Chile a todo el país.
 
@@ -88,7 +88,7 @@
   
   Además, en Matt Cargo nos preocupamos por la sustentabilidad y el medio ambiente, por lo que utilizamos prácticas de envío responsables y sostenibles.
   
-  No importa si está enviando dentro de la misma ciudad o a través del país, en Matt Cargo estamos listos para brindarle la mejor experiencia de envío. Contáctenos hoy mismo para obtener más información y comenzar a enviar con nosotros.
+  No importa si está enviando dentro de la misma ciudad o a través del país, en Matt Cargo estamos listos para brindarle la mejor experiencia de envío.  <br> <br>  <strong>  Contáctenos hoy mismo para obtener más información y comenzar a enviar con nosotros.</strong>
   
 
   </p>
@@ -102,21 +102,27 @@
 
 
 
+
+
+
 <section class="info2">
 
-
+<div class="grupoCont"> 
+<div class="contFondo"></div>
+<div class="contFondo"></div>
+<div class="contFondo"></div>
+</div>
   <img src="./assets/img/repartidor.png" alt="" class="repartidor">
   <img src="./assets/img/logoblancoFinal.png" width="180px" alt="" class="logoCaja">
+  
 
 <p class="servper">
 
-  
+  <strong class="tituloInfo2">Servicio Único</strong> <br>
   En Matt Cargo, ofrecemos un servicio personalizado para aquellos clientes que necesitan un envío más específico y adaptado a sus necesidades particulares.
-
-  Con nuestro servicio personalizado, trabajamos en estrecha colaboración con cada cliente para entender sus requisitos únicos y ofrecer soluciones personalizadas que se ajusten a sus necesidades.
-  <br> <br> Desde el embalaje y la manipulación especializada de sus artículos hasta la entrega a su destino final, nos aseguramos de que su envío reciba la atención y el cuidado necesarios en cada paso del proceso.
+ <br> <br>  Desde el embalaje y la manipulación especializada de sus artículos hasta la entrega a su destino final, nos aseguramos de que su envío reciba la atención y el cuidado necesarios en cada paso del proceso.
   
-  Además, nuestro equipo de expertos está disponible para asesorarlo en cualquier pregunta o inquietud que pueda tener sobre su envío personalizado. Ya sea que necesite un envío urgente, envío de objetos valiosos o artículos delicados, nuestro equipo está preparado para ofrecerle soluciones confiables y seguras.
+  
   
   .</p>
 </section>
@@ -134,6 +140,60 @@
 <img src="./assets/img/a572ae8f-82ab-4dd5-a3d7-493ff024a63d.jfif" alt="">
 
 </section>
+
+
+
+
+
+
+
+
+<section class="contenedorGrid"> 
+
+<div class="contA">
+  <img src="./assets/img/icons8-camión-50.png" class="" alt="">
+
+  <h2>Rapidez</h2> 
+  <p>
+Somos la mejor solución para realizar entregas en el menor tiempo posible . </p>
+</div>
+<div class="contB">
+
+  <img src="./assets/img/mapa-tarifa (1).png"  width="120px" alt="">
+</div>
+<div class="contC">
+  <img src="./assets/img/icons8-caja-fuerte-50.png" alt="">
+  <h2>Seguridad</h2>
+  <p>
+    Realizamos entregas con los más altos estándares de seguridad, poniendo a tu disposición la trayectoria, tecnología, experiencia  . </p>
+</div>
+<div  class="contD">
+  <img src="./assets/img/icons8-marcador-50.png" alt="">
+
+  <h2>Control Total</h2>
+  <p>Control total de tus envíos
+    Durante el corto tiempo de entrega, tú y tu cliente pueden saber exactamente dónde está el paquete con nuestro tracking en tiempo real por tecnología de 99minutos.
+    
+    </p>
+</div>
+<div class="contE">
+<img src="./assets/img/icons8-economic-64.png" alt="">
+  <h2>Mejores Precios</h2>
+  <p>Una sola tarifa, muchas estrategias
+    Nuestra tarifa no sólo es la mejor del mercado; es fija; no pagas por volumen, ni tiempo de viaje, ni peso.
+    Si tu envío entra dentro de las medidas sugeridas, podemos llevarlo en un sólo envío.</p>
+</div>
+
+
+
+
+
+</section>
+
+
+
+
+
 
 
 
