diseño pag admin / formularios listos

--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
       </ul>
     </nav>
     <section id="menuLogin">
-    <a href="/assets/pages/formulario.html">  <img  src="assets/img/iconologin.png" alt="userLoginIcon" class="login" ></a>
+    <a href="/assets/pages/login.html">  <img  src="assets/img/iconologin.png" alt="userLoginIcon" class="login" ></a>
+ 
     </section>
+ 
   </header>
 
 
@@ -265,10 +267,11 @@ Somos la mejor solución para realizar entregas en el menor tiempo posible . </p
       <img id="logo" src="assets/img/logoblanco.png" alt="Logo de la empresa" />
     </div>
     <div class="footer-right">
-      <ul>
+      <ul  class="listFooter">
         <li>Dirección: Calle Falsa 123, Ciudad de Antofagasta</li>
         <li>Teléfono: (123) 5555-555</li>
         <li>correoalgo.cl</li>
+        <li>¿Tienes dudas ? Escribenos <a href="./assets/pages/contacto.html">Aquí</a></li>
       </ul>
     </div>
   </footer>
