--- a/assets/pages/formulario.html
+++ b/assets/pages/formulario.html
@@ -1,11 +1,11 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <script defer src="./formulario.js" defer></script>
+    <title>Ingreso</title>
+    <script defer src="../js/formulario.js" defer></script>
     <style></style>
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@800&display=swap"
@@ -51,4 +51,4 @@
       </form>
     </div>
   </body>
-</html> -->
+</html>
