--- a/assets/pages/login.html
+++ b/assets/pages/login.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Login</title>
+
+    <link rel="stylesheet" href="../css/form.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@800&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <link rel="stylesheet" href="../css/form.css" />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-    rel="stylesheet"
-  />
+
   <body>
     <div class="contForm2"></div>
     <div class="contForm">
@@ -31,6 +33,7 @@
         <p class="errorPassword"></p>
 
         <button>Ingresar</button>
+        <a href="./formulario.html">Crear cuenta</a>
       </form>
     </div>
 
@@ -74,7 +77,7 @@
 
             const usuario = objetoJson.usuario;
             localStorage.setItem("usuario", JSON.stringify(usuario));
-            window.location = "../admin/pages/prueba.js";
+            window.location = "cuenta.html";
           } catch (error) {
             // conconssole.error(error.code);
             // console.error(error.message);
