admin completo, falta estilizar

--- a/admin/public/assets/pages/contacto.html
+++ b/admin/public/assets/pages/contacto.html
@@ -20,6 +20,7 @@
         background-color: #d9d9d9;
       }
     </style>
+    <script src="../js/contacto.js" defer></script>
   </head>
   <body>
     <img
@@ -42,7 +43,7 @@
       <li>Dirección: Avenida Principal 123, Santiago, Chile</li>
     </ul>
 
-    <form method="post">
+    <form method="post" id="form">
       <label for="nombre">Nombre:</label>
       <input type="text" id="nombre" name="nombre" required /><br />
       <label for="email">Correo electrónico:</label>
