coneccion con servidor glitch

--- a/admin/public/assets/pages/cuenta.html
+++ b/admin/public/assets/pages/cuenta.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
+  <script src="../js/"></script>
   <script>
     // viene en string y hay que cambiarlo a Json
     const storageUser = localStorage.getItem("usuario");
