--- a/admin/public/assets/pages/formulario.html
+++ b/admin/public/assets/pages/formulario.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ingreso</title>
+    <script src="../js/config.js"></script>
     <script defer src="../js/formulario.js" defer></script>
-    <style></style>
+
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@800&display=swap"
       rel="stylesheet"
