--- a/admin/public/assets/pages/login.html
+++ b/admin/public/assets/pages/login.html
@@ -12,6 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@800&display=swap"
       rel="stylesheet"
     />
+    <script src="../js/config.js"></script>
     <script src="../js/login.js" defer></script>
   </head>
 
