--- a/admin/public/assets/pages/contacto.html
+++ b/admin/public/assets/pages/contacto.html
@@ -23,12 +23,7 @@
     </style>
   </head>
   <body>
-    <img
-      class="carretera"
-      src="../img/kisspng-indian-national-highway-system-roadworks-image-5c4dbc4945fb29 1 (1).png"
-      alt=""
-      srcset=""
-    />
+    <img class="carretera" src="../img/carretera.png" alt="carretera" />
     <h1>Contacto</h1>
     <p>
       Gracias por considerar a Matt Cargo para sus necesidades de envío. <br />
@@ -53,6 +48,6 @@
       <input type="submit" value="Enviar" />
     </form>
 
-    <img src="../img/logoblancoFinal.png" width="150px" alt="" />
+    <img src="../img/logoblancoFinal.png" alt="logoFinal" class="logoFinal1" />
   </body>
 </html>
