--- a/admin/public/assets/pages/formulario.html
+++ b/admin/public/assets/pages/formulario.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ingreso</title>
-    <script src="../js/config.js"></script>
-    <script defer src="../js/formulario.js" defer></script>
+    <script src="../js/config.js " defer></script>
+    <script src="../js/formulario.js" defer></script>
 
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@800&display=swap"
@@ -19,17 +19,12 @@
 
     <div class="contForm">
       <form action="formulario.html" method="post" class="registro">
-        <img
-          src="../img/logoblancoFinal.png"
-          width="200px"
-          alt=""
-          class="logoForm"
-        />
+        <img src="../img/logoblancoFinal.png" alt="" class="logoForm" />
         <label for="name">Nombre</label>
         <input type="text" name="name" id="name" required />
         <p class="errorNom"></p>
 
-        <label for="mail">Correo</label>
+        <label for="email">Correo</label>
         <input type="text" name="email" id="email" />
         <p class="errorMail"></p>
 
