--- a/admin/public/assets/pages/login.html
+++ b/admin/public/assets/pages/login.html
@@ -12,22 +12,18 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@800&display=swap"
       rel="stylesheet"
     />
-    <script src="../js/config.js"></script>
+    <script src="../js/config.js" defer></script>
     <script src="../js/login.js" defer></script>
   </head>
 
   <body>
+    <!-- Formulario Login-->
     <div class="contForm2"></div>
     <div class="contForm">
-      <form action="" method="post">
-        <img
-          src="../img/logoblancoFinal.png"
-          width="200px"
-          alt=""
-          class="logoForm"
-        />
+      <form action="login.html" method="post">
+        <img src="../img/logoblancoFinal.png" alt="logo" class="logoForm" />
 
-        <label for="mail">Correo</label>
+        <label for="email">Correo</label>
         <input type="text" name="mail" id="email" />
         <p class="errorMail"></p>
 
