--- a/admin/public/index.html
+++ b/admin/public/index.html
@@ -27,7 +27,9 @@
             <a class="navI" href="./index.html"> Inicio </a>
           </li>
           <li>
-            <a class="navI" href="../cotizacion">Servicio </a>
+            <a class="navI" href="../components/categoria/cotizador.js"
+              >Servicio
+            </a>
           </li>
           <li>
             <a class="navI" href="./assets/pages/contacto.html"> Contacto</a>
@@ -35,7 +37,7 @@
         </ul>
       </nav>
       <div id="menuLogin">
-        <a href="/assets/pages/login.html">
+        <a href="./assets/pages/login.html">
           <img
             src="assets/img/iconologin.png"
             alt="userLoginIcon"
