--- a/admin/public/index.html
+++ b/admin/public/index.html
@@ -27,9 +27,7 @@
             <a class="navI" href="./index.html"> Inicio </a>
           </li>
           <li>
-            <a class="navI" href="../components/categoria/cotizador.js"
-              >Servicio
-            </a>
+            <a class="navI" href="../cotizacion">Servicio </a>
           </li>
           <li>
             <a class="navI" href="./assets/pages/contacto.html"> Contacto</a>
