--- a/admin/public/assets/pages/contacto.html
+++ b/admin/public/assets/pages/contacto.html
@@ -23,7 +23,7 @@
     </style>
   </head>
   <body>
-    <img class="carretera" src="../img/carretera.png" alt="carretera" />
+    <img class="carretera2" src="../img/carretera.png" alt="carretera" />
     <h1>Contacto</h1>
     <p>
       Gracias por considerar a Matt Cargo para sus necesidades de envío. <br />
