index en deploy

--- a/admin/public/index.html
+++ b/admin/public/index.html
@@ -24,7 +24,7 @@
       <nav>
         <ul class="nav1">
           <li>
-            <a class="navI" href="./index.html"> Inicio </a>
+            <a class="navI" href="../public/index.html"> Inicio </a>
           </li>
           <li>
             <a class="navI" href="../cotizacion">Servicio </a>
