--- a/admin/public/assets/pages/index.html
+++ b/admin/public/assets/pages/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- link a mis estilos -->
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
-    <link rel="stylesheet" href="assets/css/responsive.css" />
+    <link rel="stylesheet" type="text/css" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/responsive.css" />
     <title>Matt Cargo</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -14,8 +14,6 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
-
-    <script src="./index.js" defer></script>
   </head>
 
   <body>
@@ -24,29 +22,26 @@
       <nav>
         <ul class="nav1">
           <li>
-            <a class="navI" href="../public/index.html"> Inicio </a>
+            <a class="navI" href="./index.html"> Inicio </a>
           </li>
           <li>
             <a class="navI" href="../cotizacion">Servicio </a>
           </li>
           <li>
-            <a class="navI" href="./assets/pages/contacto.html"> Contacto</a>
+            <a class="navI" href="./contacto.html"> Contacto</a>
           </li>
         </ul>
       </nav>
       <div id="menuLogin">
-        <a href="./assets/pages/login.html">
-          <img
-            src="assets/img/iconologin.png"
-            alt="userLoginIcon"
-            class="login"
+        <a href="./login.html">
+          <img src="../img/iconologin.png" alt="userLoginIcon" class="login"
         /></a>
       </div>
     </header>
     <!-- Bienvenida -->
 
     <main>
-      <img src="./assets/img/toro.png" alt="toroGranate" class="toroPortada" />
+      <img src="../img/toro.png" alt="toroGranate" class="toroPortada" />
       <div class="contGris"></div>
 
       <div class="contenedorBanner">
@@ -54,11 +49,7 @@
         <h2 class="subtituloBanner">Uniendo destinos en todo Chile</h2>
 
         <div class="diseno1"></div>
-        <img
-          class="carretera"
-          src="./assets/img/carretera.png"
-          alt="carretera"
-        />
+        <img class="carretera" src="../img/carretera.png" alt="carretera" />
       </div>
 
       <a class="cotizar" href="../cotizacion"> Cotiza Aquí</a>
@@ -91,7 +82,7 @@
           >
         </p>
 
-        <img src="./assets/img/camioneta.png" class="camioneta" alt="" />
+        <img src="../img/camioneta.png" class="camioneta" alt="" />
       </section>
       <!-- Servicios -->
       <section class="info2">
